# Tabular-Benchmark-MLOps

./: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  TROUBLESHOOTING.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ADR.md
src/: evaluate.py  models.py  train.py
