[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tabular-benchmark-mlops"
version = "1.0.0"
description = "Benchmark pédagogique tabulaire : Sklearn vs XGBoost vs PyTorch"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "valorisa", email = "contact@valorisa.github.io" }
]
dependencies = [
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "wandb>=0.15.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "pre-commit>=3.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
known_first_party = ["src"]
[tool.flake8]
max-line-length = 88
extend-ignore = "E203,W503"
